--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/ProfileManager.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/ProfileManager.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Profile Manager Page";
+    ViewData["CategoryVisibility"] = ViewData["CategoryVisibility"];
 }
 <div class=" containeruser p-3">
     <div class="controlheader ms-auto">
