--- a/CAPSTONE_TEAM01_2024/Views/Categories/EndSemesterReport.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/EndSemesterReport.cshtml
@@ -2,5 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["CategoryVisibility"] = "block";
 }
 End Semester report here
+@ViewData["CategoryVisibility"]
