--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -11,6 +11,7 @@
         case "SemesterPlan":
         case "Statistics":
         case "ProfileManager":
+        case "ShowStatistics":
             Layout = "_MainLayout";
             break;
     }
