--- a/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
@@ -1,17 +1,25 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    ViewData["CategoryVisibility"] = ViewData["CategoryVisibility"];
+    // ViewData["CategoryVisibility"] = "block";
 }
 
 <!-- Page content -->
     <!-- Navigation links -->
-<div class="container-fluid d-flex justify-content-center align-items-center " style="height:inherit; width:inherit">
+<div class="container-fluid d-flex justify-content-center align-items-center " 
+     style="height:inherit; 
+            width:inherit; 
+            overflow: hidden;">
     <video disablePictureInPicture class="embed-responsive-item embed-responsive-16by9 align-self-center mr-0"
            autoplay="" loop="" muted="" 
            style="height: 85vh;width: auto; z-index:-1;">
         <source src="~/Resources/Video/background_VLU.mp4" type="video/mp4">
     </video>
-    <div class="container text-center" style="position:absolute;background-color: rgba(0,0,0,0.7); padding: 2rem 2rem 2rem 2rem;">
+    <div class="container text-center" 
+         style="position:absolute;
+                background-color: rgba(0,0,0,0.7);
+                padding: 2rem 2rem 2rem 2rem;
+                max-width:60%;
+                max-height:40%">
         <h3 style="color:white">WEBSITE QUẢN LÝ CÔNG TÁC CỐ VẤN HỌC TẬP</h3>
         <h3 style="color:white">-VLU-</h3>
         <h1 style="color:white">XIN CHÀO</h1>
