--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -36,7 +36,8 @@
                             <form class="form-inline" asp-action="logout" asp-controller="users">
                                 <button type="submit" 
                                         class="nav-link btn btn-link btn-dark text-white float-right"
-                                        style="height:50%;">
+                                        style="height:50%;"
+                                        id="logoutButton">
                                 Logout
                             </button>
                         </form>
@@ -84,42 +85,41 @@
                             <img src="~/Resources/Img/Icon1.png"
                                  style="width:40px; height:auto;">
                         </div>
-                        <div class="col-8 fs-6 btn menu-btn fw-bold text-dark text-start"
-                             onclick="toggleCategory(document.querySelector('#Category_Content'))">
+                        <div class="col-8 fs-6 btn menu-btn fw-bold text-dark text-start">                                                     
                             DANH MỤC
                         </div>
                         <!-- Show More Menu -->
                         <div id="Category_Content"
                              class="menu-content ms-auto"
-                             style="display:@(ViewData["CategoryVisibility"]);width:90%">
-                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-0"
+                             style="display:none;width:90%">
+                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-1"
                                asp-area="" asp-controller="Categories" asp-action="SchoolYear"
                                style="text-decoration:none;">
                                 <div class="col-2">
-                                    <img src="~/Resources/Img/Icon1.png"
-                                         style="width:40px; height:auto;">
+                                    <img src="~/Resources/Img/Icon5.png"
+                                         style="width:30px; height:auto;">
                                 </div>
                                 <div class="col-10">
                                     Năm Học
                                 </div>
                             </a>
-                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-0"
+                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-1"
                                asp-area="" asp-controller="Categories" asp-action="SemesterPlan"
                                style="text-decoration:none">
                                 <div class="col-2">
-                                    <img src="~/Resources/Img/Icon1.png"
-                                         style="width:40px; height:auto;">
+                                    <img src="~/Resources/Img/Icon7.jpg"
+                                         style="width:30px; height:auto;">
                                 </div>
                                 <div class="col-10">
                                     Kế Hoạch Học Kỳ
                                 </div>
                             </a>
-                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-0"
+                            <a class="row d-flex nav-link text-dark m-1 justify-content-center align-items-center m-0 p-1"
                                asp-area="" asp-controller="Categories" asp-action="EndSemesterReport"
                                style="text-decoration:none">
                                 <div class="col-2">
-                                    <img src="~/Resources/Img/Icon1.png"
-                                         style="width:40px; height:auto;">
+                                    <img src="~/Resources/Img/Icon6.jpg"
+                                         style="width:30px; height:auto;">
                                 </div>
                                 <div class="col-10">
                                     Báo Cáo Cuối Kì
@@ -130,7 +130,7 @@
                 </li>
                 <li class="nav-item text-start m-1">
                     <a class="row d-flex nav-link text-dark justify-content-center align-items-center"
-                       asp-area="" asp-controller="Home" asp-action="HomePage"
+                       asp-area="" asp-controller="Statistics" asp-action="ShowStatistics"
                        style="text-decoration:none">
                         <div class="col-2">
                             <img src="~/Resources/Img/Icon4.png"
@@ -153,7 +153,7 @@
        
     <!--Footer-->
     <footer class="border-top text-muted">
-        <div class="container-fluid" id="Login_Footer">
+        <div class="container-fluid" id="Main_Footer">
             <div style="float:left; display:inline;">
                 <b style="color:#d72235;">&copy; 2024 - Đại học Văn Lang<br></b>
                 <b>Khoa Công Nghệ Thông Tin</b>
@@ -163,7 +163,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
     <script>
         // var subMenus = document.querySelectorAll('div#Category_Content a');
 
@@ -194,21 +193,58 @@
             // document.getElementById(navItemId).classList.add("selected");
         });
 
-        function toggleCategory(x)
-        {
-
-            if (x.style.display == "none") {
-                x.style.display = "block";
-                @ViewData["CategoryVisibility"] = "block";
-            }
-            else {
-                x.style.display = "none";
-                @ViewData["CategoryVisibility"] = "block";
-            }
-        }
 
 
     </script>
+    <script>
+        //persistent drop down
+        document.addEventListener("DOMContentLoaded", function () {
+            const categoryContent = document.getElementById("Category_Content");
+            const savedState = sessionStorage.getItem("CategoryVisibility");
+
+            if (savedState) {
+                categoryContent.style.display = savedState;
+            }
+
+            // Remove the hidden class after setting the display state
+            categoryContent.classList.remove("hidden");
+
+            document.querySelector(".menu-btn").addEventListener("click", function () {
+                if (categoryContent.style.display === "none" || categoryContent.style.display === "") {
+                    categoryContent.style.display = "block";
+                    sessionStorage.setItem("CategoryVisibility", "block");
+                } else {
+                    categoryContent.style.display = "none";
+                    sessionStorage.setItem("CategoryVisibility", "none");
+                }
+            });
+        });
+
+        //toggle visibility for category dropdown
+        function toggleCategory(x) {
+
+            if (x.style.display == "none") {
+                x.style.display = "block";
+        @ViewData["CategoryVisibility"] = "block";
+            }
+            else {
+                x.style.display = "none";
+        @ViewData["CategoryVisibility"] = "block";
+            }
+        }
+        //clear session data when logout
+        document.addEventListener("DOMContentLoaded", function () {
+            const logoutButton = document.getElementById("logoutButton");
+
+            if (logoutButton) {
+                logoutButton.addEventListener("click", function () {
+                    sessionStorage.clear();
+                });
+            }
+        });
+
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
