Fixing Layout Bugs

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow" id="Login_Top_Nav" style="height:8vh;">
             <!-- Logo and name / Left navbar -->
             <div class="container-fluid">
-                <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;>
+                <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">QUẢN LÝ CÔNG TÁC<br>CỐ VẤN HỌC TẬP</b></a>
 
                 <!-- Space coz im clueless -->
@@ -149,7 +149,7 @@
             </ul>
         </div>
             <!--Content of page-->
-            <div id="Content_Panel">
+            <div id="Content_Panel" style="z-index:1;">
                 <main role="main">
                     @RenderBody()
                 </main>
