--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -12,6 +12,7 @@
         case "Statistics":
         case "ProfileManager":
         case "ShowStatistics":
+        case "ClassList":
             Layout = "_MainLayout";
             break;
     }
